2012-02-10  Murray Cumming  <murrayc@murrayc.com>

	--debug-date-check: Do not show the window.

	* glom/main_local_options.[h|cc]: Make the handler function a class method,
	and make the variables private. Add a get_debug_date_check_result() method.
	* glom/application.cc: Stop the application, before showing the window, 
	if the --debug-date-check option was given, as before we used GApplication.
	
2012-02-10  Murray Cumming  <murrayc@murrayc.com>>

	Move all command-line handling into the remote Application.

	* glom/main.cc:
	* glom/application.cc:
	* glom/main_local_options.[h|cc]:
	* glom/main_remote_options.[h|cc]: Split the command-line options into 
	two OptionGroups, in their own files, even putting local option handling in
	its separate file. This lets us handle them properly, despite the lack of 
	GApplication support for separate local/remote GOption handling.
	( See https://bugzilla.gnome.org/show_bug.cgi?id=634990#c6 )
	thanks to our use of G_APPLICATION_NON_UNIQUE.
	Having them separate should make it easier to really do it properly if
	GApplication ever allows it.

2012-02-10  Murray Cumming  <murrayc@murrayc.com>

	Use G_APPLICATION_NON_UNIQUE.

	* glom/application.cc: This is necessary because we use singletons that
	are really per-AppWindow, to simplify our code.

2012-02-10  Murray Cumming  <murrayc@murrayc.com>

	Add a Gtk::Application subclass, used by main().

	* Makefile.am:
	* main.cc:
	* glom/application.[h|cc]: Use a derived Gtk::Application which instantiates
	the Glom::AppWindow via its on_open(). Some command-line option handling is 
	temporarily commented out.

2012-02-24  Murray Cumming  <murrayc@murrayc.com>

	Fix a typo in the previous commit.

	* glom/mode_data/box_data_list_related.cc: Do not use m_found_set where
	we really mean found_set.

2012-02-24  Murray Cumming  <murrayc@murrayc.com>

	Prevent SQL SELECT errors when the user does not have view (SELECT) rights.
